--- a/09_gan_mnist_seed_experiments.ipynb
+++ b/09_gan_mnist_seed_experiments.ipynb
@@ -199,7 +199,7 @@
         "        self.optimiser = torch.optim.Adam(self.parameters(), lr=0.0001)\n",
         "\n",
         "        # counter and accumulator for progress\n",
-        "        self.counter = 0;\n",
+        "        self.counter = 0\n",
         "        self.progress = []\n",
         "\n",
         "        pass\n",
@@ -218,7 +218,7 @@
         "        loss = self.loss_function(outputs, targets)\n",
         "\n",
         "        # increase counter and accumulate error every 10\n",
-        "        self.counter += 1;\n",
+        "        self.counter += 1\n",
         "        if (self.counter % 10 == 0):\n",
         "            self.progress.append(loss.item())\n",
         "            pass\n",
@@ -409,7 +409,7 @@
         "        self.optimiser = torch.optim.Adam(self.parameters(), lr=0.0001)\n",
         "\n",
         "        # counter and accumulator for progress\n",
-        "        self.counter = 0;\n",
+        "        self.counter = 0\n",
         "        self.progress = []\n",
         "        \n",
         "        pass\n",
@@ -431,7 +431,7 @@
         "        loss = D.loss_function(d_output, targets)\n",
         "\n",
         "        # increase counter and accumulate error every 10\n",
-        "        self.counter += 1;\n",
+        "        self.counter += 1\n",
         "        if (self.counter % 10 == 0):\n",
         "            self.progress.append(loss.item())\n",
         "            pass\n",
@@ -725,6 +725,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 种子实验\n",
+        "\n",
+        "### 种子 1"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 16,
       "metadata": {
@@ -763,6 +772,13 @@
         "out1 = G.forward(seed1)\n",
         "img1 = out1.detach().numpy().reshape(28,28)\n",
         "plt.imshow(img1, interpolation='none', cmap='Blues')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 种子 2"
       ]
     },
     {
@@ -807,6 +823,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 种子1 到 种子2 的过渡"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 18,
       "metadata": {
@@ -847,6 +870,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 两个种子的和"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 19,
       "metadata": {
@@ -881,12 +911,17 @@
         }
       ],
       "source": [
-        "# 两个种子的和\n",
-        "\n",
         "seed3 = seed1 + seed2\n",
         "out3 = G.forward(seed3)\n",
         "img3 = out3.detach().numpy().reshape(28,28)\n",
         "plt.imshow(img3, interpolation='none', cmap='Blues')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 两个种子的差"
       ]
     },
     {
@@ -924,12 +959,17 @@
         }
       ],
       "source": [
-        "# 两个种子的差\n",
-        "\n",
         "seed4 = seed1 - seed2\n",
         "out4 = G.forward(seed4)\n",
         "img4 = out4.detach().numpy().reshape(28,28)\n",
         "plt.imshow(img4, interpolation='none', cmap='Blues')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 两个种子的乘积"
       ]
     },
     {
@@ -967,8 +1007,6 @@
         }
       ],
       "source": [
-        "# 两个种子的乘积\n",
-        "\n",
         "seed4 = seed1 * seed2\n",
         "out4 = G.forward(seed4)\n",
         "img4 = out4.detach().numpy().reshape(28,28)\n",
