--- a/07_gan_mnist_first_attempt.ipynb
+++ b/07_gan_mnist_first_attempt.ipynb
@@ -207,7 +207,7 @@
         "        self.optimiser = torch.optim.SGD(self.parameters(), lr=0.01)\n",
         "\n",
         "        # counter and accumulator for progress\n",
-        "        self.counter = 0;\n",
+        "        self.counter = 0\n",
         "        self.progress = []\n",
         "\n",
         "        pass\n",
@@ -226,7 +226,7 @@
         "        loss = self.loss_function(outputs, targets)\n",
         "\n",
         "        # increase counter and accumulate error every 10\n",
-        "        self.counter += 1;\n",
+        "        self.counter += 1\n",
         "        if (self.counter % 10 == 0):\n",
         "            self.progress.append(loss.item())\n",
         "            pass\n",
@@ -414,7 +414,7 @@
         "        self.optimiser = torch.optim.SGD(self.parameters(), lr=0.01)\n",
         "\n",
         "        # counter and accumulator for progress\n",
-        "        self.counter = 0;\n",
+        "        self.counter = 0\n",
         "        self.progress = []\n",
         "        \n",
         "        pass\n",
@@ -436,7 +436,7 @@
         "        loss = D.loss_function(d_output, targets)\n",
         "\n",
         "        # increase counter and accumulate error every 10\n",
-        "        self.counter += 1;\n",
+        "        self.counter += 1\n",
         "        if (self.counter % 10 == 0):\n",
         "            self.progress.append(loss.item())\n",
         "            pass\n",
