--- a/08_gan_mnist.ipynb
+++ b/08_gan_mnist.ipynb
@@ -199,7 +199,7 @@
         "        self.optimiser = torch.optim.Adam(self.parameters(), lr=0.0001) # 代替 SGD()\n",
         "\n",
         "        # counter and accumulator for progress\n",
-        "        self.counter = 0;\n",
+        "        self.counter = 0\n",
         "        self.progress = []\n",
         "\n",
         "        pass\n",
@@ -218,7 +218,7 @@
         "        loss = self.loss_function(outputs, targets)\n",
         "\n",
         "        # increase counter and accumulate error every 10\n",
-        "        self.counter += 1;\n",
+        "        self.counter += 1\n",
         "        if (self.counter % 10 == 0):\n",
         "            self.progress.append(loss.item())\n",
         "            pass\n",
@@ -409,7 +409,7 @@
         "        self.optimiser = torch.optim.Adam(self.parameters(), lr=0.0001) # 代替 SGD()\n",
         "\n",
         "        # counter and accumulator for progress\n",
-        "        self.counter = 0;\n",
+        "        self.counter = 0\n",
         "        self.progress = []\n",
         "        \n",
         "        pass\n",
@@ -431,7 +431,7 @@
         "        loss = D.loss_function(d_output, targets)\n",
         "\n",
         "        # increase counter and accumulate error every 10\n",
-        "        self.counter += 1;\n",
+        "        self.counter += 1\n",
         "        if (self.counter % 10 == 0):\n",
         "            self.progress.append(loss.item())\n",
         "            pass\n",
