去掉代码中多余的分号（09、12、14、15、16）

--- a/12_gan_celeba.ipynb
+++ b/12_gan_celeba.ipynb
@@ -14,7 +14,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -58,18 +58,13 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "using cuda: GeForce GTX 1650\n"
+            "using cuda: GeForce GTX 1650\n",
+            "cuda\n",
+            "tensor([1.], device='cpu')\n",
+            "tensor([1.])\n",
+            "tensor([1.])\n",
+            "torch.Size([20, 13, 2, 4])\n"
           ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "device(type='cuda')"
-            ]
-          },
-          "execution_count": 11,
-          "metadata": {},
-          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -82,7 +77,11 @@
         "\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "\n",
-        "device"
+        "print(device)\n",
+        "\n",
+        "print(torch.FloatTensor([1.0]))\n",
+        "print(torch.FloatTensor([1.0]).to(device))\n",
+        "print(torch.cuda.FloatTensor([1.0]))"
       ]
     },
     {
