--- a/14_gan_cnn_celeba.ipynb
+++ b/14_gan_cnn_celeba.ipynb
@@ -300,7 +300,7 @@
         "        self.optimiser = torch.optim.Adam(self.parameters(), lr=0.0001)\n",
         "\n",
         "        # counter and accumulator for progress\n",
-        "        self.counter = 0;\n",
+        "        self.counter = 0\n",
         "        self.progress = []\n",
         "\n",
         "        pass\n",
@@ -319,7 +319,7 @@
         "        loss = self.loss_function(outputs, targets)\n",
         "\n",
         "        # increase counter and accumulate error every 10\n",
-        "        self.counter += 1;\n",
+        "        self.counter += 1\n",
         "        if (self.counter % 10 == 0):\n",
         "            self.progress.append(loss.item())\n",
         "            pass\n",
@@ -557,7 +557,7 @@
         "        self.optimiser = torch.optim.Adam(self.parameters(), lr=0.0001)\n",
         "\n",
         "        # counter and accumulator for progress\n",
-        "        self.counter = 0;\n",
+        "        self.counter = 0\n",
         "        self.progress = []\n",
         "        \n",
         "        pass\n",
@@ -579,7 +579,7 @@
         "        loss = D.loss_function(d_output, targets)\n",
         "\n",
         "        # increase counter and accumulate error every 10\n",
-        "        self.counter += 1;\n",
+        "        self.counter += 1\n",
         "        if (self.counter % 10 == 0):\n",
         "            self.progress.append(loss.item())\n",
         "            pass\n",
