--- a/15_gan_cnn_celeba_refinements.ipynb
+++ b/15_gan_cnn_celeba_refinements.ipynb
@@ -305,7 +305,7 @@
     "        self.optimiser = torch.optim.Adam(self.parameters(), lr=0.0001)\n",
     "\n",
     "        # counter and accumulator for progress\n",
-    "        self.counter = 0;\n",
+    "        self.counter = 0\n",
     "        self.progress = []\n",
     "\n",
     "        pass\n",
@@ -324,7 +324,7 @@
     "        loss = self.loss_function(outputs, targets)\n",
     "\n",
     "        # increase counter and accumulate error every 10\n",
-    "        self.counter += 1;\n",
+    "        self.counter += 1\n",
     "        if (self.counter % 10 == 0):\n",
     "            self.progress.append(loss.item())\n",
     "            pass\n",
@@ -568,7 +568,7 @@
     "        self.optimiser = torch.optim.Adam(self.parameters(), lr=0.0001)\n",
     "\n",
     "        # counter and accumulator for progress\n",
-    "        self.counter = 0;\n",
+    "        self.counter = 0\n",
     "        self.progress = []\n",
     "        \n",
     "        pass\n",
@@ -590,7 +590,7 @@
     "        loss = D.loss_function(d_output, targets)\n",
     "\n",
     "        # increase counter and accumulate error every 10\n",
-    "        self.counter += 1;\n",
+    "        self.counter += 1\n",
     "        if (self.counter % 10 == 0):\n",
     "            self.progress.append(loss.item())\n",
     "            pass\n",
