--- a/16_cgan_mnist.ipynb
+++ b/16_cgan_mnist.ipynb
@@ -214,7 +214,7 @@
         "        self.optimiser = torch.optim.Adam(self.parameters(), lr=0.0001)\n",
         "\n",
         "        # counter and accumulator for progress\n",
-        "        self.counter = 0;\n",
+        "        self.counter = 0\n",
         "        self.progress = []\n",
         "\n",
         "        pass\n",
@@ -234,7 +234,7 @@
         "        loss = self.loss_function(outputs, targets)\n",
         "\n",
         "        # increase counter and accumulate error every 10\n",
-        "        self.counter += 1;\n",
+        "        self.counter += 1\n",
         "        if (self.counter % 10 == 0):\n",
         "            self.progress.append(loss.item())\n",
         "            pass\n",
@@ -430,7 +430,7 @@
         "        self.optimiser = torch.optim.Adam(self.parameters(), lr=0.0001)\n",
         "\n",
         "        # counter and accumulator for progress\n",
-        "        self.counter = 0;\n",
+        "        self.counter = 0\n",
         "        self.progress = []\n",
         "        \n",
         "        pass\n",
@@ -453,7 +453,7 @@
         "        loss = D.loss_function(d_output, targets)\n",
         "\n",
         "        # increase counter and accumulate error every 10\n",
-        "        self.counter += 1;\n",
+        "        self.counter += 1\n",
         "        if (self.counter % 10 == 0):\n",
         "            self.progress.append(loss.item())\n",
         "            pass\n",
