补充Notebook中的读书笔记（00，01，02，03，06）

--- a/00_pytorch_basics.ipynb
+++ b/00_pytorch_basics.ipynb
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -83,7 +83,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -122,7 +122,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -156,7 +156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -193,7 +193,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -241,7 +241,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 7,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -280,7 +280,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -292,20 +292,40 @@
       },
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "tensor(5.7500)"
-            ]
-          },
-          "execution_count": 19,
-          "metadata": {},
-          "output_type": "execute_result"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "求导前 x 的梯度= None\n",
+            "求导后 x 的梯度= tensor(1.)\n",
+            "求导前 x = tensor(3.5000, requires_grad=True)\n",
+            "求导前 x 的梯度= tensor(1.)\n",
+            "求导后 x 的梯度(1+7)= tensor(8.)\n",
+            "求导前 x = tensor(3.5000, requires_grad=True)\n",
+            "求导前 x 的梯度= tensor(8.)\n",
+            "求导后 x 的梯度(8+7)= tensor(15.)\n"
+          ]
         }
       ],
       "source": [
         "# 求导的目的是得出 x 的梯度\n",
         "\n",
-        "x.grad"
+        "x=torch.tensor(3.5,requires_grad=True)\n",
+        "y=x\n",
+        "print(\"求导前 x 的梯度=\",x.grad)\n",
+        "y.backward()\n",
+        "print(\"求导后 x 的梯度=\",x.grad)\n",
+        "\n",
+        "y=x*x\n",
+        "print(\"求导前 x =\",x)\n",
+        "print(\"求导前 x 的梯度=\",x.grad)\n",
+        "y.backward()\n",
+        "print(\"求导后 x 的梯度(1+7)=\",x.grad)\n",
+        "\n",
+        "y=x*x\n",
+        "print(\"求导前 x =\",x)\n",
+        "print(\"求导前 x 的梯度=\",x.grad)\n",
+        "y.backward()\n",
+        "print(\"求导后 x 的梯度(8+7)=\",x.grad)"
       ]
     }
   ],
