--- a/01_pytorch_computation_graph.ipynb
+++ b/01_pytorch_computation_graph.ipynb
@@ -38,9 +38,12 @@
         "  (x) --> (y) --> (z)\n",
         "```\n",
         "\n",
-        "> y = x^2\n",
-        ">\n",
-        "> z = 2y + 3"
+        "$$\n",
+        "\\begin{align*}\n",
+        "y &= x^2\\\\\n",
+        "z &= 2y + 3\n",
+        "\\end{align*}\n",
+        "$$"
       ]
     },
     {
@@ -58,7 +61,6 @@
         "x = torch.tensor(3.5, requires_grad=True)\n",
         "\n",
         "y = x*x\n",
-        "\n",
         "z = 2*y + 3"
       ]
     },
@@ -94,14 +96,16 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "tensor(14.)\n"
+            "tensor(14.)\n",
+            "None\n"
           ]
         }
       ],
       "source": [
         "# 输出 x = 3.5 时的梯度\n",
         "\n",
-        "print(x.grad)"
+        "print(x.grad)\n",
+        "print(y.retain_grad())"
       ]
     },
     {
@@ -114,21 +118,20 @@
         "## 多个链接到一个结点的计算图\n",
         "\n",
         "```\n",
-        "\n",
         "  (a) --> (x)\n",
         "       \\ /     \\\n",
         "       .       (z)\n",
         "      / \\     /\n",
         "  (b) --> (y)\n",
+        "```\n",
         "\n",
-        " \n",
-        "  x = 2a + 3b\n",
-        " \n",
-        "  y = 5a^2 + 3b^3\n",
-        " \n",
-        "  z = 2x + 3y\n",
-        "\n",
-        "```"
+        "$$\n",
+        "\\begin{align*}\n",
+        "x &= 2a + 3b\\\\\n",
+        "y &= 5a^2 + 3b^3\\\\\n",
+        "z &= 2x + 3y\n",
+        "\\end{align*}\n",
+        "$$"
       ]
     },
     {
@@ -184,7 +187,7 @@
         {
           "data": {
             "text/plain": [
-              "tensor(64.)"
+              "(tensor(64.), tensor(33.))"
             ]
           },
           "execution_count": 7,
@@ -195,7 +198,7 @@
       "source": [
         "# 输出 a = 2.0 时的梯度值\n",
         "\n",
-        "a.grad"
+        "a.grad, b.grad"
       ]
     },
     {
